--- a/demo.html
+++ b/demo.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Reverb.js - Demo</title>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/burnson/Reverb.js/master/reverb.js"></script>
   </head>
   <body>
     <div>Reverb.js</div>
 <script type="text/javascript">
-var reverbjs={extend:function(audioContext){function decodeBase64ToArrayBuffer(input){function encodedValue(input,index){var encodedCharacter,x=input.charCodeAt(index);return index<input.length&&(x>=65&&90>=x?encodedCharacter=x-65:x>=97&&122>=x?encodedCharacter=x-71:x>=48&&57>=x?encodedCharacter=x+4:43===x?encodedCharacter=62:47===x?encodedCharacter=63:61!==x&&console.log("base64 encountered unexpected character code: "+x)),encodedCharacter}if(0===input.length||input.length%4>0)return void console.log("base64 encountered unexpected length: "+input.length);for(var i,padding=input.match(/[=]*$/)[0].length,decodedLength=3*input.length/4-padding,buffer=new ArrayBuffer(decodedLength),bufferView=new Uint8Array(buffer),encoded=[],d=0,e=0;decodedLength>d;){for(i=0;4>i;i+=1)encoded[i]=encodedValue(input,e),e+=1;bufferView[d]=4*encoded[0]+Math.floor(encoded[1]/16),d+=1,decodedLength>d&&(bufferView[d]=encoded[1]%16*16+Math.floor(encoded[2]/4),d+=1),decodedLength>d&&(bufferView[d]=encoded[2]%4*64+encoded[3],d+=1)}return buffer}function decodeAndSetupBuffer(node,arrayBuffer,callback){audioContext.decodeAudioData(arrayBuffer,function(audioBuffer){node.buffer=audioBuffer,"function"==typeof callback&&null!==audioBuffer&&callback(node)})}audioContext.createReverbFromBase64=function(audioBase64,callback){var reverbNode=audioContext.createConvolver();return decodeAndSetupBuffer(reverbNode,decodeBase64ToArrayBuffer(audioBase64),callback),reverbNode},audioContext.createReverbFromUrl=function(audioUrl,callback){var reverbNode=audioContext.createConvolver(),request=new XMLHttpRequest;return request.open("GET",audioUrl,!0),request.responseType="arraybuffer",request.onload=function(){decodeAndSetupBuffer(reverbNode,request.response,callback)},request.send(),reverbNode}}};
-
-var reverb, context;
+var reverb, masterGain, context;
 
 function dBToGain(dB) {
   return (dB <= -100) ? 0 : Math.pow(10, dB / 10);
@@ -18,6 +17,9 @@ function dBToGain(dB) {
 function initialize () {
   context = new (window.AudioContext || window.webkitAudioContext)();
   reverbjs.extend(context);
+  masterGain = context.createGain();
+  masterGain.gain.value = 1;
+  masterGain.connect(context.destination);
 }
 
 function midiNoteNumberToFrequency (midiNoteNumber) {
@@ -28,9 +30,10 @@ function playScale () {
   var i, loudness = 0.1;
   var notesGoingUp = [60, 62, 64, 65, 67, 69, 71, 72]
   var notesGoingDown = [48, 47, 45, 43, 41, 40, 38, 36];
+  var s = context.currentTime;
   for (i = 0; i < notesGoingUp.length; i++) {
-    scheduleSynthNote(notesGoingUp[i], 1 + i * 0.5, 0.25, loudness);
-    scheduleSynthNote(notesGoingDown[i], 1 + i * 0.5, 0.25, loudness);
+    scheduleSynthNote(notesGoingUp[i], s + 1 + i * 0.5, 0.25, loudness);
+    scheduleSynthNote(notesGoingDown[i], s + 1 + i * 0.5, 0.25, loudness);
   }
 }
 
@@ -66,7 +69,6 @@ function scheduleSynthNote (note, start, duration, gain) {
 }
 
 function shutdownGracefully () {
-  console.log('Shutting down audio...');
   var start = context.currentTime, length = 0.5, progress = 0;
   while (progress <= 1) {
     masterGain.gain.value = 1 - progress;
@@ -76,11 +78,12 @@ function shutdownGracefully () {
 
 function testReverb (url) {
   reverb = context.createReverbFromUrl(url, function() { playScale(); });
-  reverb.connect(context.destination);
+  reverb.connect(masterGain);
 }
 
 window.onload = initialize;
 window.onbeforeunload = shutdownGracefully;
         </script>
+        <a href="#" onclick="testReverb('https://github.com/burnson/Reverb.js/raw/master/Library/StMarysAbbeyReconstructionPhase1.m4a');">Try StMarysAbbeyReconstructionPhase1.m4a</a>
     </body>
 </html>
