--- a/demo.html
+++ b/demo.html
@@ -96,9 +96,11 @@ var reverbjs = {
         request = new XMLHttpRequest();
       request.open('GET', audioUrl, true);
       request.responseType = 'arraybuffer';
-      request.onload = function () {
-        console.log('Downloaded impulse response');
-        decodeAndSetupBuffer(reverbNode, request.response, callback);
+      request.onreadystatechange = function () {
+        if (request.readyState === 4 && request.status === 200) {
+          console.log('Downloaded impulse response');
+          decodeAndSetupBuffer(reverbNode, request.response, callback);
+        }
       };
       request.onerror = function (e) {
         console.log('There was an error receiving the response: ' + e);
