--- a/demo.html
+++ b/demo.html
@@ -109,6 +109,27 @@ var reverbjs = {
       request.send();
       return reverbNode;
     };
+
+    audioContext.createReverbFromBase64Url = function (audioUrl, callback) {
+      console.log('Downloading base64 impulse response from ' + audioUrl);
+      var reverbNode = audioContext.createConvolver(),
+        request = new XMLHttpRequest();
+      request.open('GET', audioUrl, true);
+      request.onreadystatechange = function () {
+        if (request.readyState === 4 && request.status === 200) {
+          console.log('Downloaded impulse response');
+          decodeAndSetupBuffer(reverbNode,
+            decodeBase64ToArrayBuffer(request.response),
+            callback);
+        }
+      };
+      request.onerror = function (e) {
+        console.log('There was an error receiving the response: ' + e);
+        reverbjs.networkError = e;
+      };
+      request.send();
+      return reverbNode;
+    };
   }
 };
 </script><!--END REVERBJS-->
@@ -182,7 +203,7 @@ function shutdownGracefully () {
 }
 
 function testReverb (url) {
-  reverb = context.createReverbFromUrl(url, function() { playScale(); });
+  reverb = context.createReverbFromBase64Url(url, function() { playScale(); });
   reverb.connect(masterGain);
 }
 
@@ -190,40 +211,40 @@ window.onload = initialize;
 window.onbeforeunload = shutdownGracefully;
         </script>
 <!--BEGIN GENERATED-->
-<h1>InsidePiano <a href="javascript:testReverb('https://rawgit.com/burnson/Reverb.js/master/Library/InsidePiano.wav');">(listen)</a></h1>
+<h1>InsidePiano <a href="javascript:testReverb('https://rawgit.com/burnson/Reverb.js/master/Library/InsidePiano.wav.base64');">(listen)</a></h1>
 <h2>Attribution</h2><p>Recorded by William Andrew Burnson (2013)<br/>An impulse response recorded from just outside a Yamaha baby grand piano with the damper pedal down.<br/><br/>Attribution Share Alike Creative Commons<br/>http://creativecommons.org/licenses/by-sa/3.0/
 </p>
 <h2>Usage</h2>
 <pre>var audioContext = (your audio context);
 reverbjs.extend(audioContext);
-var reverbUrl = "https://rawgit.com/burnson/Reverb.js/master/Library/InsidePiano.wav";
-var reverbNode = audioContext.createReverbFromUrl(reverbUrl, function() {
+var reverbUrl = "https://rawgit.com/burnson/Reverb.js/master/Library/InsidePiano.wav.base64";
+var reverbNode = audioContext.createReverbFromBase64Url(reverbUrl, function() {
   console.log("Loaded reverb " + reverbUrl);
 });
 reverbNode.connect(audioContext.destination);
 (some source node).connect(reverbNode);
 </pre>
-<h1>MidiverbMark2Preset29 <a href="javascript:testReverb('https://rawgit.com/burnson/Reverb.js/master/Library/MidiverbMark2Preset29.wav');">(listen)</a></h1>
+<h1>MidiverbMark2Preset29 <a href="javascript:testReverb('https://rawgit.com/burnson/Reverb.js/master/Library/MidiverbMark2Preset29.wav.base64');">(listen)</a></h1>
 <h2>Attribution</h2><p>Recorded by William Andrew Burnson (2011)<br/>An impulse response recorded from preset 29 on an Alesis Midiverb II.<br/><br/>Attribution Share Alike Creative Commons<br/>http://creativecommons.org/licenses/by-sa/3.0/
 </p>
 <h2>Usage</h2>
 <pre>var audioContext = (your audio context);
 reverbjs.extend(audioContext);
-var reverbUrl = "https://rawgit.com/burnson/Reverb.js/master/Library/MidiverbMark2Preset29.wav";
-var reverbNode = audioContext.createReverbFromUrl(reverbUrl, function() {
+var reverbUrl = "https://rawgit.com/burnson/Reverb.js/master/Library/MidiverbMark2Preset29.wav.base64";
+var reverbNode = audioContext.createReverbFromBase64Url(reverbUrl, function() {
   console.log("Loaded reverb " + reverbUrl);
 });
 reverbNode.connect(audioContext.destination);
 (some source node).connect(reverbNode);
 </pre>
-<h1>StMarysAbbeyReconstructionPhase1 <a href="javascript:testReverb('https://rawgit.com/burnson/Reverb.js/master/Library/StMarysAbbeyReconstructionPhase1.wav');">(listen)</a></h1>
+<h1>StMarysAbbeyReconstructionPhase1 <a href="javascript:testReverb('https://rawgit.com/burnson/Reverb.js/master/Library/StMarysAbbeyReconstructionPhase1.wav.base64');">(listen)</a></h1>
 <h2>Attribution</h2><p>By OpenAirLib (2011)<br/>http://www.openairlib.net/auralizationdb/content/st-marys-abbey-reconstruction<br/><br/>"The abbey of St. Mary was mostly destroyed during the dissolution under the rule of Henry VIII and now only ruins remain. These ruins can be found in the Museum Gardens adjacent to the river Ouse in York city. Virtual models of this now derelict church were built using measurements taken from scaled plans and other sources of architectural evidence. Impulse responses were then created using ray-based room acoustic modelling software. Three different models of the church were used with increasing levels of detail in their geometric structure, referred to as Phase 1, Phase 2 and Phase 3. The work was carried out as part of a Bachelor of Engineering project at the Audiolab in the University of York."<br/><br/>Attribution Share Alike Creative Commons<br/>http://creativecommons.org/licenses/by-sa/3.0/<br/>
 </p>
 <h2>Usage</h2>
 <pre>var audioContext = (your audio context);
 reverbjs.extend(audioContext);
-var reverbUrl = "https://rawgit.com/burnson/Reverb.js/master/Library/StMarysAbbeyReconstructionPhase1.wav";
-var reverbNode = audioContext.createReverbFromUrl(reverbUrl, function() {
+var reverbUrl = "https://rawgit.com/burnson/Reverb.js/master/Library/StMarysAbbeyReconstructionPhase1.wav.base64";
+var reverbNode = audioContext.createReverbFromBase64Url(reverbUrl, function() {
   console.log("Loaded reverb " + reverbUrl);
 });
 reverbNode.connect(audioContext.destination);
